# AUV-Simulator-Gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
models/auv_demo/: model.config  model.sdf
models/auv_demo/meshes/: hull.dae  thruster.dae
models/sauvc pool/: model.config
sim_pkg/: package.xml
sim_pkg/launch/: my_world.launch
sim_pkg/models/auv_demo/: model.config  model.sdf
sim_pkg/models/sauvc pool/: model.config
sim_pkg/models/sea_surface/: model.config  model.sdf
sim_pkg/src/: freebuoyancy.cpp  freebuoyancy.h  sim_image_converter.cpp  thruster_plugin.cpp
sim_pkg/world/: test_world.world
src/: data_publisher.cpp  test_buoyancy_plugin.cpp  thruster_plugin.cpp
test_sim/: CMakeLists.txt  package.xml
test_sim/launch/: my_world.launch
test_sim/models/auv_demo/: model.config  model.sdf
test_sim/world/: empty_world.world
